[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beaniecocktails"]

[project]
name = "beanie-cocktails"
version = "0.0.1"
authors = [
  { name="Mark Smith", email="mark.smith@mongodb.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beanie             ~=1.26.0",
    "fastapi            ~=0.114.0",
    "motor              ~=3.5.1",
    "pydantic           ~=2.9.1",
    "pydantic-settings  ~=2.4.0",
    "tqdm               ~=4.66.5",
    "uvicorn",
]
keywords = [
    "fastapi", "beanie", "mongodb", "example",
]

[project.optional-dependencies]
tests = [
    "coverage[toml]~=5.0.2",
    "pytest",
]
dev = [
    "ruff",
]

[project.urls]
Homepage = "https://github.com/mongodb-developer/beanie-example"
Issues = "https://github.com/mongodb-developer/beanie-example/issues"

[project.scripts]
init-db = "beaniecocktails.scripts.init_db:main"

[tool.coverage.run]
parallel = true
branch = true
source = ["beaniecocktails"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
